2004-07-22  Pascal Obry  <pascal@obry.org>

	* zlib-thin.ads:
	(ULong): Fix definition (changed to unsigned_long), fix regression on
	 64 bits computers.
	
2003-07-22  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* zlib.ads, zlib.adb:
	Synchronize with ZLib-Ada CVS repository.

2003-07-22  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* zlib.adb:
	Minor reformat.

2004-07-16  Pascal Obry  <pascal@obry.org>

	* zlib.adb:
	Fix style errors.
	Minor reformatting.

2004-06-25  Pascal Obry  <pascal@obry.org>

	* strings_maps.ads:
	Adjust to new AI302 version.

	* ai302-containers-hash_tables.ads, ai302-containers-hash_tables.adb:
	Sync with main repository.

	* ai302-containers-indefinite_hashed_maps.ads,
	  ai302-containers-indefinite_hashed_maps.adb:
	Sync with main repository.

	* ai302-containers-indefinite_ordered_sets.ads,
	  ai302-containers-indefinite_ordered_sets.adb:
	Sync with main repository.

	* ai302-containers-indefinite_vectors.ads,
	  ai302-containers-indefinite_vectors.adb:
	Sync with main repository.

	* ai302-containers-prime_numbers.ads,
	  ai302-containers-prime_numbers.adb:
	Sync with main repository.

	* ai302-containers-red_black_trees.ads,
	  ai302-containers-red_black_trees.adb:
	Sync with main repository.

	* ai302-containers-vectors.ads, ai302-containers-vectors.adb:
	Sync with main repository.

	* ai302-containers.ads:
	Sync with main repository.

2003-05-31  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* zlib-thin.ads, zlib-thin.adb:
	Update ZLib-Ada version from latest sources.

	* zlib.ads, zlib.adb:
	(Is_Open): New routine.
	(Read): Add Allow_Read_Some parameter. Rest_Last have to be initialized
	 now.
	(Filter_Type): Remove Opened flag, use access /= null instead.

2004-05-28  Pascal Obry  <pascal@obry.org>

	* makefile:
	(SOURCES): Add ai302-containers-indefinite_vectors.ad[sb].

	* ai302-containers-indefinite_vectors.ads,
	  ai302-containers-indefinite_vectors.adb:
	Initial revision.

2004-05-27  Pascal Obry  <pascal@obry.org>

	* makefile: